--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -3,7 +3,7 @@
 :root {
     --primary-color: #6a11cb;
     --secondary-color: #2575fc;
-    --background-color: #ffffff;
+    --background-color: c
     --text-dark: #212529;
     --text-light: #6c757d;
     --border-color: #eaeaea;
