--- a/templates/yogasathi/sudarshan_kriya.html
+++ b/templates/yogasathi/sudarshan_kriya.html
@@ -1,7 +1,7 @@
 {% extends 'yogasathi/base.html' %} 
 {% load static %}
 
-{% block title %}Yoga Sathi - Surya Namaskar Coach{% endblock %}
+{% block title %}Yoga Sathi - Sudarshan Kriya Coach{% endblock %}
 
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
@@ -71,20 +71,20 @@
 
         <aside class="sidebar">
             <div id="referencePoseContainer" class="info-card">
-                <h4 id="poseName" class="pose-title">Surya Namaskar</h4>
+                <h4 id="poseName" class="pose-title">Sudarshan Kriya</h4>
                 <div class="reference-image-wrapper">
                     <img
                         id="referenceImage"
-                        src="{% static 'images/surya_namaskar/Surya_Namaskar.png' %}"
+                        src="{% static 'images/asanas/Sudarshan_Kriya.png' %}"
                         alt="Reference Pose"
                     />
                 </div>
                 <div class="pose-timer-wrapper">
                     <i class="bi bi-hourglass-split"></i>
-                    <span id="poseTimer" class="pose-timer-text">Hold Pose</span>
+                    <span id="poseTimer" class="pose-timer-text">Start Breathing</span>
                 </div>
             </div>
-
+            
             <div class="info-card">
                 <h5 class="card-title">
                     <i class="bi bi-cpu-fill"></i> AI Feedback Core
@@ -118,10 +118,10 @@
 
             <div class="controls mt-auto">
                 <button id="startButton" class="btn btn-start">
-                    <i class="bi bi-play-fill"></i> Start Session
+                    <i class="bi bi-play-fill"></i> Start Kriya
                 </button>
                 <button id="stopButton" class="btn btn-stop" disabled>
-                    <i class="bi bi-stop-fill"></i> Stop Session
+                    <i class="bi bi-stop-fill"></i> Stop Kriya
                 </button>
             </div>
         </aside>
@@ -148,5 +148,5 @@
       crossorigin="anonymous"
     ></script>
     
-    <script src="{% static 'js/surya_namaskar.js' %}"></script>
+    <script src="{% static 'js/sudarshan_kriya.js' %}"></script>
 {% endblock %}
